--- a/Supermercado.Api/Views/Categoria/Index.cshtml
+++ b/Supermercado.Api/Views/Categoria/Index.cshtml
@@ -6,7 +6,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="col-lg-12" style="text-align: right !important;">
-    <a class="btn btn-secondary" asp-area="" asp-controller="Categoria" asp-action="ListarCategorias">Listar Categorias</a>
+    <a class="btn btn-secondary" asp-area="" asp-controller="Categoria" asp-action="NovaCategoria">Nova Categoria</a>
 </div>
 <br />
 
@@ -14,17 +14,21 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th scope="col">Categorias</th>
+                <th scope="col">Produto</th>
+                <th scope="col">Categoria</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @item.Nome
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        Leite
+                    </td>
+                    <td>
+                        @item.Nome
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
