--- a/Supermercado.Api/Views/Produto/Index.cshtml
+++ b/Supermercado.Api/Views/Produto/Index.cshtml
@@ -15,7 +15,7 @@
         <thead>
             <tr>
                 <th scope="col">Nome</th>
-                <th scope="col">Quantidade</th>
+                <th scope="col">Quantidade em Estoque</th>
                 <th scope="col">Categoria</th>
             </tr>
         </thead>
