add apenas 1 item

--- a/Supermercado.Api/Views/Categoria/NovaCategoria.cshtml
+++ b/Supermercado.Api/Views/Categoria/NovaCategoria.cshtml
@@ -1,4 +1,4 @@
-﻿@model Supermercado.Core.Domain.Requests.CategoriaRequest
+﻿@model Supermercado.Core.Domain.Response.CategoriaResponse
 @{
     ViewData["Title"] = "Nova Categorias";
     Layout = "~/Views/Shared/_Layout.cshtml";
