--- a/Supermercado.Api/Views/Produto/NovoProduto.cshtml
+++ b/Supermercado.Api/Views/Produto/NovoProduto.cshtml
@@ -1,4 +1,4 @@
-﻿@model Supermercado.Core.Domain.Requests.ProdutoRequest
+﻿@model Supermercado.Core.Domain.Response.ProdutoResponse
 @{
     ViewData["Title"] = "Novo Produto";
     Layout = "~/Views/Shared/_Layout.cshtml";
